# Keyboard101

./: .gitmodules  README.md  test.html
.claude/: settings.json  settings.local.json
android/: build.gradle  gradle.properties  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  pinyin_jni.cpp
android/app/src/main/java/com/keyboard101/: ChineseLibrary.java  EmojiData.java  GoogleInputEngine.java  HandwritingEngine.java  Keyboard101Service.java  KeyboardView.java  PinyinDictionary.java  PinyinEngine.java  SettingsActivity.java  UpdateChecker.java
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/layout/: activity_settings.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml  method.xml  network_security_config.xml
